[gd_scene load_steps=12 format=2]

[ext_resource path="res://Interfacce Utente/Inventario/Immagini/background.png" type="Texture" id=1]
[ext_resource path="res://Interfacce Utente/Inventario/FontShop.tres" type="DynamicFont" id=2]
[ext_resource path="res://Interfacce Utente/Impostazioni e salvataggi cloud/Settings.gd" type="Script" id=3]
[ext_resource path="res://Interfacce Utente/Inventario/Font/Xolonium-Regular.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://Interfacce Utente/Inventario/Immagini/paper background_pressed.png" type="Texture" id=5]
[ext_resource path="res://Interfacce Utente/Inventario/Immagini/paper background.png" type="Texture" id=6]
[ext_resource path="res://Interfacce Utente/Inventario/Immagini/wood background.png" type="Texture" id=7]
[ext_resource path="res://Interfacce Utente/Inventario/Immagini/exit.png" type="Texture" id=8]
[ext_resource path="res://Sounds/pick-up coin.wav" type="AudioStream" id=9]

[sub_resource type="Theme" id=1]

[sub_resource type="DynamicFont" id=2]
size = 24
font_data = ExtResource( 4 )

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="NinePatchRect" type="NinePatchRect" parent="."]
anchor_left = 0.169922
anchor_top = 0.180833
anchor_right = 0.830078
anchor_bottom = 0.819167
size_flags_horizontal = 2
size_flags_vertical = 2
theme = SubResource( 1 )
texture = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Video" type="Control" parent="NinePatchRect"]
visible = false
anchor_left = 0.031
anchor_top = 0.156
anchor_right = 0.962
anchor_bottom = 0.945
margin_left = -20.0
margin_top = -20.0
margin_right = 20.0
margin_bottom = 20.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="NinePatchRect/Video"]
anchor_left = 0.136017
anchor_top = 0.210576
anchor_right = 0.384017
anchor_bottom = 0.31033
size_flags_horizontal = 2
size_flags_vertical = 2
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Shadows :"
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Label4" type="Label" parent="NinePatchRect/Video"]
anchor_left = 0.160237
anchor_top = 0.203945
anchor_right = 1.13399
anchor_bottom = 0.325982
margin_left = -23.0
margin_top = 218.0
margin_right = -0.000213623
margin_bottom = 207.865
rect_scale = Vector2( 0.7, 0.7 )
size_flags_horizontal = 2
size_flags_vertical = 2
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Note: some settings need you to restart the game"
__meta__ = {
"_edit_use_anchors_": true
}

[node name="shadowCheck" type="CheckButton" parent="NinePatchRect/Video"]
anchor_left = 0.389993
anchor_top = 0.207879
anchor_right = 0.503535
anchor_bottom = 0.315722
margin_left = 11.0
pressed = true
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Label3" type="Label" parent="NinePatchRect/Video"]
anchor_left = 0.136017
anchor_top = 0.383427
anchor_right = 0.406976
anchor_bottom = 0.693629
margin_top = 22.0
margin_bottom = -63.895
size_flags_horizontal = 2
size_flags_vertical = 2
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Small Details:"
__meta__ = {
"_edit_use_anchors_": true
}

[node name="detailsCheck" type="CheckButton" parent="NinePatchRect/Video"]
anchor_left = 0.294378
anchor_top = 0.380731
anchor_right = 0.545982
anchor_bottom = 0.693417
margin_left = 132.0
margin_top = 22.0
margin_bottom = -63.895
pressed = true
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Audio" type="Control" parent="NinePatchRect"]
anchor_left = 0.0295858
anchor_top = 0.224543
anchor_right = 0.968935
anchor_bottom = 0.960836
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Label" type="Label" parent="NinePatchRect/Audio"]
margin_left = 73.0
margin_top = 36.0
margin_right = 40.0
margin_bottom = 14.0
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Mute Music:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="musicMute" type="CheckButton" parent="NinePatchRect/Audio"]
margin_left = 303.0
margin_top = 34.0
margin_right = 76.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HSlider" type="HSlider" parent="NinePatchRect/Audio"]
margin_left = 84.0
margin_top = 93.0
margin_right = 322.0
margin_bottom = 16.0
min_value = 1.0
max_value = 5.0
value = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="NinePatchRect/Audio"]
margin_left = 73.0
margin_top = 142.0
margin_right = 40.0
margin_bottom = 14.0
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Mute Sound Effects:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="sfxMute" type="CheckButton" parent="NinePatchRect/Audio"]
margin_left = 435.0
margin_top = 142.0
margin_right = 76.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HSlider2" type="HSlider" parent="NinePatchRect/Audio"]
margin_left = 84.0
margin_top = 208.0
margin_right = 322.0
margin_bottom = 109.0
min_value = 1.0
max_value = 5.0
value = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="videoButton" type="TextureRect" parent="NinePatchRect"]
anchor_left = 0.359541
anchor_top = 0.0423622
anchor_right = 0.625813
anchor_bottom = 0.22513
rect_min_size = Vector2( 180, 70 )
size_flags_vertical = 4
texture = ExtResource( 7 )
expand = true
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Video" type="TextureButton" parent="NinePatchRect/videoButton"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = -10.0
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 5 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="NinePatchRect/videoButton/Video"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = 3.8147e-06
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.156863, 0.156863, 0.156863, 1 )
text = "Video"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="audioButton" type="TextureRect" parent="NinePatchRect"]
anchor_left = 0.0515278
anchor_top = 0.0414906
anchor_right = 0.3178
anchor_bottom = 0.224258
rect_min_size = Vector2( 180, 70 )
size_flags_vertical = 4
texture = ExtResource( 7 )
expand = true
__meta__ = {
"_edit_use_anchors_": true
}

[node name="audio" type="TextureButton" parent="NinePatchRect/audioButton"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = -10.0
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 5 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="NinePatchRect/audioButton/audio"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.156863, 0.156863, 0.156863, 1 )
text = "Audio"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Quit" type="TextureButton" parent="NinePatchRect"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -67.0
margin_top = 11.0
margin_right = -17.0
margin_bottom = 62.0
size_flags_horizontal = 4
size_flags_vertical = 4
texture_normal = ExtResource( 8 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )
bus = "fx"
[connection signal="toggled" from="NinePatchRect/Video/shadowCheck" to="." method="_on_shadowCheck_toggled"]
[connection signal="toggled" from="NinePatchRect/Video/detailsCheck" to="." method="_on_detailsCheck_toggled"]
[connection signal="toggled" from="NinePatchRect/Audio/musicMute" to="." method="_on_musicMute_toggled"]
[connection signal="value_changed" from="NinePatchRect/Audio/HSlider" to="." method="_on_musicSlider_value_changed"]
[connection signal="toggled" from="NinePatchRect/Audio/sfxMute" to="." method="_on_sfxMute_toggled"]
[connection signal="value_changed" from="NinePatchRect/Audio/HSlider2" to="." method="_on_sfxSlider_value_changed"]
[connection signal="pressed" from="NinePatchRect/videoButton/Video" to="." method="_on_Video_pressed"]
[connection signal="pressed" from="NinePatchRect/audioButton/audio" to="." method="_on_audio_pressed"]
[connection signal="pressed" from="NinePatchRect/Quit" to="." method="_on_quit_pressed"]
